fix(form) : add page (collapse logic + internet informations structure)

--- a/src/app/form/form.component.scss
+++ b/src/app/form/form.component.scss
@@ -235,3 +235,50 @@ img {
     }
   }
 }
+
+// collapse
+.collapse {
+  width: 296px;
+  border: 1px solid $grey-4;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-bottom: 13px;
+  &.notCollapsed {
+    margin-bottom: 8px;
+    background: $grey-6;
+  }
+  .form-group {
+    margin: 0;
+    color: $grey-2;
+    @include cn-regular-14;
+  }
+  .inputSection {
+    input {
+      width: 269px;
+      margin-top: 8px;
+    }
+    padding: 0px 15px 19px 12px;
+    img {
+      margin-right: -54px;
+    }
+  }
+  .titleCollapse {
+    width: 100%;
+    @include cn-bold-16;
+    color: $grey-2;
+    height: 24px;
+  }
+  .collapseHeader {
+    height: 24px;
+    padding: 32px 15px 32px 12px;
+  }
+  .logo {
+    height: 24px;
+    width: 24px;
+    svg {
+      width: 100%;
+      height: 100%;
+      fill: $grey-1;
+    }
+  }
+}
